--- a/index.html
+++ b/index.html
@@ -1,245 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RightFit Interiors — Bespoke Carpentry &amp; Joinery</title>
-  <!-- Tailwind CSS CDN for rapid utility classes -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Link to our custom stylesheet (overrides and additional styles) -->
-  <link rel="stylesheet" href="styles.css">
-  <!-- Include Google Fonts for Poppins -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <!-- Site Header -->
-  <header id="site-navbar" class="site-header fixed top-0 left-0 w-full z-50 transition-transform duration-300">
-    <div class="container header-inner">
-      <!-- Logo (replace the RF mark with your logo image) -->
-      <a href="#" class="brand">
-        <img src="logo.png" alt="Right Fit Interiors logo" class="logo">
-      </a>
-      <!-- Mobile nav toggle button -->
-      <button class="nav-toggle" aria-controls="nav-menu" aria-expanded="false">
-        <span></span><span></span><span></span>
-      </button>
-      <!-- Primary navigation -->
-      <ul id="nav-menu" class="nav-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="cta"><a href="#contact">Free consultation</a></li>
-      </ul>
-    </div>
-  </header>
+I notice you've shared what appears to be a template or placeholder for an AI prompt, but it's not a complete or functional prompt itself. The content shows:
 
-  <!-- Hero section with fixed background -->
-  <section class="hero-fixed">
-    <div class="hero-content">
-      <div class="container">
-        <h1>Transforming Homes with Bespoke Carpentry &amp; Joinery</h1>
-        <p class="hero-lead">Over 25 years of experience creating custom kitchens, bedrooms, and interiors tailored to your lifestyle.</p>
-        <a href="#contact" class="btn btn-primary">Schedule Your Free Consultation</a>
-      </div>
-    </div>
-    <!-- Feature row overlay -->
-    <ul class="hero-features">
-      <li>
-        <strong>Bespoke Designs</strong>
-        <span>Tailored solutions for your unique needs.</span>
-      </li>
-      <li>
-        <strong>Bedrooms</strong>
-        <span>Quality craftsmanship for stunning bedroom renovations.</span>
-      </li>
-      <li>
-        <strong>Kitchens</strong>
-        <span>Maximize market appeal with expert renovations.</span>
-      </li>
-    </ul>
-  </section>
+```
+{{ $('Prepare AI Prompt').item.json.prompt }}
+```
 
-  <!-- Tagline / About section -->
-  <section class="tagline">
-    <div class="container tagline-inner">
-      <div class="tagline-text">
-        <h2>Transforming Spaces, Elevating Homes</h2>
-        <p>At RightFit Interiors, we blend traditional craftsmanship with modern design to deliver spaces that are both functional and beautiful. Our commitment to quality and attention to detail ensures every project exceeds expectations.</p>
-      </div>
-      <div class="tagline-image">
-        <!-- Complementary kitchen image -->
-        <img src="https://c.pxhere.com/photos/69/3c/kitchen_interior_luxury_home_modern_design_kitchen_interior_house-1370531.jpg!d" alt="Contemporary kitchen">
-      </div>
-    </div>
-  </section>
+This looks like it might be from a system that uses templating syntax (possibly a note-taking app like Obsidian with a plugin) where `$('Prepare AI Prompt')` references some kind of data structure containing an AI prompt.
 
-  <!-- Services section -->
-  <section class="services-light" id="services">
-    <div class="container">
-      <h2>Expert Services</h2>
-      <p class="section-lead">Explore our range of services, from custom kitchen installations to bespoke bedroom fittings, all designed to enhance your home’s value and appeal.</p>
-      <div class="cards-grid">
-        <!-- Bedrooms card -->
-        <a href="bedrooms.html" class="card block">
-          <img src="https://c.pxhere.com/photos/5c/3f/photo-1606932.jpg!d" alt="Bedroom service" class="transition-transform duration-300 transform hover:scale-105">
-          <div class="card-body">
-            <h3>Bedrooms</h3>
-            <p>Transform your bedroom into a serene retreat with our bespoke solutions, including fitted wardrobes, custom storage, and elegant finishes tailored to your preferences.</p>
-          </div>
-        </a>
-        <!-- Kitchens card -->
-        <a href="kitchens.html" class="card block">
-          <img src="https://c.pxhere.com/photos/69/3c/kitchen_interior_luxury_home_modern_design_kitchen_interior_house-1370531.jpg!d" alt="Kitchen service" class="transition-transform duration-300 transform hover:scale-105">
-          <div class="card-body">
-            <h3>Kitchens</h3>
-            <p>Our kitchen fitting service encompasses design consultation, custom cabinetry, and seamless installation. We work closely with you to create a kitchen that reflects your style and meets your functional needs.</p>
-          </div>
-        </a>
-        <!-- Internal Doors card -->
-        <a href="internal-doors.html" class="card block">
-          <img src="https://c.pxhere.com/photos/5c/3f/photo-1606932.jpg!d" alt="Internal Doors service" class="transition-transform duration-300 transform hover:scale-105">
-          <div class="card-body">
-            <h3>Internal Doors</h3>
-            <p>Upgrade your home’s interior with professionally installed doors, available in a range of styles and materials to suit your design vision.</p>
-          </div>
-        </a>
-        <!-- Flooring card -->
-        <a href="flooring.html" class="card block">
-          <img src="https://c.pxhere.com/photos/62/ef/tv-362221.jpg!d" alt="Flooring service" class="transition-transform duration-300 transform hover:scale-105">
-          <div class="card-body">
-            <h3>Flooring</h3>
-            <p>Enhance your interiors with our expert flooring services, offering a variety of materials and finishes to complement your home’s aesthetic.</p>
-          </div>
-        </a>
-        <!-- Media Walls card -->
-        <a href="media-walls.html" class="card block">
-          <img src="https://c.pxhere.com/photos/62/ef/tv-362221.jpg!d" alt="Media Walls service" class="transition-transform duration-300 transform hover:scale-105">
-          <div class="card-body">
-            <h3>Media Walls</h3>
-            <p>Create stunning media walls with integrated storage and display options, custom built to house your entertainment essentials.</p>
-          </div>
-        </a>
-        <!-- Under Stair Storage card -->
-        <a href="under-stair-storage.html" class="card block">
-          <img src="https://c.pxhere.com/photos/5c/3f/photo-1606932.jpg!d" alt="Under Stair Storage service" class="transition-transform duration-300 transform hover:scale-105">
-          <div class="card-body">
-            <h3>Under Stair Storage</h3>
-            <p>Maximise unused space with bespoke under stair storage solutions, from pull-out drawers to hidden cabinets tailored to your staircase.</p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </section>
+To help you better, I'd need:
+1. The actual content or context around this template
+2. What specific task or question you want the AI to help with
+3. Any additional details about what type of response you're looking for
 
-  <!-- Gallery section -->
-  <section class="gallery" id="gallery">
-    <div class="container">
-      <h2>Gallery</h2>
-      <p class="section-lead">Explore our portfolio of stunning kitchen and bathroom transformations.</p>
-      <div class="gallery-grid">
-        <div class="gallery-item"><img src="https://c.pxhere.com/photos/69/3c/kitchen_interior_luxury_home_modern_design_kitchen_interior_house-1370531.jpg!d" alt="Modern kitchen" class="transition-transform duration-300 transform hover:scale-105"></div>
-        <div class="gallery-item"><img src="https://c.pxhere.com/photos/5c/3f/photo-1606932.jpg!d" alt="Bedroom renovation" class="transition-transform duration-300 transform hover:scale-105"></div>
-        <div class="gallery-item"><img src="https://c.pxhere.com/photos/62/ef/tv-362221.jpg!d" alt="Media wall installation" class="transition-transform duration-300 transform hover:scale-105"></div>
-        <div class="gallery-item"><img src="https://c.pxhere.com/photos/5c/3f/photo-1606932.jpg!d" alt="Elegant bedroom" class="transition-transform duration-300 transform hover:scale-105"></div>
-        <div class="gallery-item"><img src="https://c.pxhere.com/photos/69/3c/kitchen_interior_luxury_home_modern_design_kitchen_interior_house-1370531.jpg!d" alt="Bright kitchen" class="transition-transform duration-300 transform hover:scale-105"></div>
-        <div class="gallery-item"><img src="https://c.pxhere.com/photos/62/ef/tv-362221.jpg!d" alt="Custom media wall" class="transition-transform duration-300 transform hover:scale-105"></div>
-      </div>
-    </div>
-  </section>
+Could you provide more information about what you'd like me to assist with? For example, are you trying to:
+- Generate a specific type of prompt?
+- Understand how this template works?
+- Get help crafting an AI prompt for a particular purpose?
 
-  <!-- Testimonials section with fixed background -->
-  <section class="testimonials-static">
-    <div class="testimonials-overlay">
-      <div class="container">
-        <h2>Testimonials</h2>
-        <div class="testimonials-container">
-          <div class="testimonial">
-            <div class="stars">★★★★★</div>
-            <p>RightFit Interiors transformed our outdated kitchen into a stunning space. Highly recommend their craftsmanship and service!</p>
-            <div class="author">Sarah&nbsp;J.</div>
-          </div>
-          <div class="testimonial">
-            <div class="stars">★★★★★</div>
-            <p>Exceptional service and attention to detail! My bedroom renovation exceeded all expectations. Truly a professional experience.</p>
-            <div class="author">Mark&nbsp;T.</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact section -->
-  <section class="contact" id="contact">
-    <div class="container contact-inner">
-      <!-- Contact information -->
-      <div class="contact-info">
-        <h2>Get in touch</h2>
-        <p>Serving homeowners in and around Burton on Trent, UK. Tell us about your project and we’ll get back with ideas and a free quote.</p>
-        <ul class="contact-list">
-          <li>Phone: <a href="tel:07838481948">07838 481 948</a></li>
-          <li>Email: <a href="mailto:Contact-Us@rightfit-kitchens.co.uk">Contact-Us@rightfit-kitchens.co.uk</a></li>
-          <li>Social: 
-            <a href="https://www.facebook.com/">Facebook</a> · 
-            <a href="https://twitter.com/">X</a> · 
-            <a href="https://www.tiktok.com/">TikTok</a>
-          </li>
-        </ul>
-      </div>
-      <!-- Contact form -->
-      <form class="contact-form">
-        <label>Your name</label>
-        <input type="text" placeholder="Enter your name" required>
-        <label>Email address</label>
-        <input type="email" placeholder="Enter your email" required>
-        <label>Your message</label>
-        <textarea rows="5" placeholder="Tell us about your project" required></textarea>
-        <button type="submit" class="btn btn-primary">Submit your inquiry</button>
-        <p id="form-note" class="section-lead"></p>
-      </form>
-    </div>
-  </section>
-
-  <!-- Site footer -->
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <!-- About column -->
-      <div class="footer-col about">
-        <h3>Transformations</h3>
-        <p>Expert kitchen and bathroom renovations for homeowners.</p>
-        <div class="social-links">
-          <a href="https://www.facebook.com/" aria-label="Facebook">Facebook</a>
-          <a href="https://www.instagram.com/" aria-label="Instagram">Instagram</a>
-          <a href="https://www.tiktok.com/" aria-label="TikTok">TikTok</a>
-          <a href="https://twitter.com/" aria-label="X">X</a>
-        </div>
-      </div>
-      <!-- Contact column -->
-      <div class="footer-col contact">
-        <h3>Get in touch</h3>
-        <ul class="footer-contact-list">
-          <li>07838 481 948</li>
-          <li><a href="mailto:Contact-Us@rightfit-kitchens.co.uk">Contact-Us@rightfit-kitchens.co.uk</a></li>
-        </ul>
-      </div>
-      <!-- Service column -->
-      <div class="footer-col service">
-        <h3>Service</h3>
-        <form class="subscribe-form">
-          <label for="subscribe-email" class="visually-hidden">Enter your email address</label>
-          <input id="subscribe-email" type="email" placeholder="Your email for contact" required>
-          <button type="submit" class="btn btn-secondary">Submit your request now</button>
-        </form>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p>© <span id="year"></span>. All rights reserved.</p>
-    </div>
-  </footer>
-
-  <!-- JavaScript for interactive features -->
-  <script src="script.js"></script>
-</body>
-</html>
+I'm happy to help once I understand your specific needs!
